# discordbot-transcoder

./: .gitignore  Cargo.toml  Dockerfile  app.yaml  go.mod  main.go
.github/workflows/: ci.yml  pr.yml
go/: go.mod  main.go
go/transcoder/: backoff.go  connection.go  messages.go  messages_test.go  service.go  subscriber.go
src/: main.rs
transcoder/: backoff.go  backoff_test.go  connection.go  hello.go  hello_test.go  messages.go  messages_test.go  service.go  subscriber.go
