[package]
name = "discordbot-transcoder"
description = "Audio transcoding service for a Discord bot."
version = "0.1.0"
authors = ["Alex Weaver <weaver.alex.d@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
